# asciiartgen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: color.cpp  color.hpp  conversion_method.cpp  conversion_method.hpp  main.cpp
tests/: test_conversion_method.cpp
